feat: 로컬 환경 구성